sql/src/test/resources/drill/window/queries/negative/q23.res
0\t
VALIDATION ERROR
.*Expression 'a1' is not being grouped
